# TexttoSql

./: LICENSE  environment.yml  pyproject.toml  test.txt
src/texttosql/: application.py  config.ini  configuration.py  prompts.py  sqlServerDB.py
src/texttosql/finetune/: README.md  dataset.xlsx  dataset_prepared.jsonl
